css/utility.css
/**** General ****/
html, body {
    margin: 0;
    font-family: 'Raleway', sans-serif;
    scroll-behavior: smooth;
}
h1, h2 {
    font-weight: 600;
}
h1 {
    font-size: 56px;
}
h2 {
    font-size: 40px;
}
h1, h2, h3, p {
    margin: 0;
}
a {
    text-decoration: none;
}
.container {
    max-width: 1440px;
    margin: 0 auto;
    padding: 0 20px;
}
section {
    padding: 80px 0;
}
section.section-recepy {
    padding: 40px 0;
}
.center {
    text-align: center;
}
.radius {
    border-radius: 12px;
}
.impressum {
    padding: 80px 0;
}
.impressum section {
    padding: 20px 0;
}
.btn-green {
    color: #fff;
    background-color: green;
    padding: 12px 56px;
    border: 0;
    transition: all .1s ease-in;
}
.btn-green:hover {
    animation: hover 1s ease;
    cursor: pointer;
}
.btn-green:active {
    transform: scale(.95);
}
/**** General ****/
/**** Spacing ****/
/**** Padding ****/
.pt50 {
    padding-top: 50px;
}
.pb50 {
    padding-bottom: 50px;
}
.pt20 {
    padding-top: 20px;
}
.pr20 {
    padding-right: 20px;
}
.pb20 {
    padding-bottom: 20px;
}
.pl20 {
    padding-left: 20px;
}
.pl10{
    padding-left: 10px;
}
.pt10{
    padding-top: 10px;
}
.pb10 {
    padding-bottom: 10px;
}
/**** Padding ****/
/**** Margin ****/
.mta {
    margin-top: auto;
} 
.mr50 {
    margin-right: 50px;
}
.ml50 {
    margin-left: 50px;
}
.mb20 {
    margin-bottom: 20px;
}
.ml20 {
    margin-left: 20px;
}
.mr20 {
    margin-right: 20px;
}
.mr10 {
    margin-right: 10px;
}
.mb10 {
    margin-bottom: 10px;
}
/**** Margin ****/
/**** Spacing ****/

/**** Background ****/
.bg-grey {
    background-color: #eee;
}
/**** Background ****/

/**** Queries ****/
@media (min-width: 768px) {
    .show-mobile {
        display: none;
    }
}
@media (max-width: 767px) {
    .hide-mobile {
        display: none;
    }
    .show-mobile {
        display: block;
    }
}
@media (max-width: 575px) {
    section {
        padding: 40px 0;
    }
    .hide-mobile {
        display: none;
    }
    .show-mobile {
        display: block;
    }
}
/**** Queries ****/

/**** Animation ****/
@keyframes hover {
    50% {
        transform: scale(1.1);
        filter: brightness(1.2);
    }
    100% {
        transform: scale(1);
        filter: brightness(1);
    }
}
/**** Animation ****/

